2003-04-21 Jim Garlick <garlick@llnl.gov>

    * src/{parse.y,parse.lex,device.c}: Add "ifon" and "ifoff" conditionals.

    * src/wrappers.c: workaround for RH9 getaddrinfo core dumps.

    * Makefile,powerman.spec: install phantom.dev.

    * test/vpcd.c,etc/vpc.dev: add toggle command to test ifoff/ifon 
    functionality.

    * etc/phantom.dev: fix ifoff syntax and add cycle script.

2003-04-18 Jim Garlick <garlick@llnl.gov>

    * src/{parse.y,parse.lex,device.c}: Get rid of "onstring" and "offstring" 
    and add optional on="regex" off="regex" parameters to setstatus stmt.

    * etc/phantom.dev: Beginnings of phantom device support.

2003-04-17 Jim Garlick <garlick@llnl.gov>

    * src/{parse.y,parse.lex,device.c}: Implement "foreachnode" and 
    "foreachplug" constructs which will execute an inner block of statements 
    N times, where N is the number of configured nodes on this device, or 
    the number of plugs respectively.  In the inner block, "%s" will iterate 
    through the list of plugs (or plugs corresponding to configured nodes).

2003-04-16 Jim Garlick <garlick@llnl.gov>

    * src/parse.y:  Remove ordering dependency of device config directives.  
    Specify device name in front of spec open brace instead of "name" line.  
    Plug names are now handled as single directive with a list of strings 
    rather than individual plug name directives.  Make device types known to 
    the scanner and remove quotes around them.  Move all "spec" handling to 
    parse.y.  Do away with maxplugcount directive.

2003-04-15 Jim Garlick <garlick@llnl.gov>

    * src/parse.y: Cleanup to prepare for nested blocks of script code.

    * src/{parse.y,parse.lex,device.c}: Add 'foreachplug' and 'foreachnode' 
    script constructs to allow repeated execution of a subblock of statements.
    The number of iterations is the number of plugs configured or the number 
    of nodes. (not yet tested)

2003-04-14 Jim Garlick <garlick@llnl.gov>
