@@ -15,12 +15,12 @@ specification  "phantom" {
 	script status {
 		send "P?\r\n"
 		expect "(0|1)\r"
-		setstatus "1" $1 on="1" off="0"
+		setplugstate "1" $1 on="1" off="0"
 	}
 	script on {
 		send "P?\r\n"
 		expect "(0|1)\r"
-		setstatus "1" $1 on="1" off="0"
+		setplugstate "1" $1 on="1" off="0"
 		ifoff {
 			send "PT\r\n"
 			expect "ok\r"
@@ -29,7 +29,7 @@ specification  "phantom" {
 	script off {
 		send "P?\r\n"
 		expect "(0|1)\r"
-		setstatus "1" $1 on="1" off="0"
+		setplugstate "1" $1 on="1" off="0"
 		ifon {
 			send "PT\r\n"
 			expect "ok\r"
@@ -38,7 +38,7 @@ specification  "phantom" {
 	script cycle {
 		send "P?\r\n"
 		expect "(0|1)\r"
-		setstatus "1" $1 on="1" off="0"
+		setplugstate "1" $1 on="1" off="0"
 		ifon {
 			send "PT\r\n"
 			expect "ok\r"
@@ -60,11 +60,11 @@ specification  "phantom" {
 	script status_beacon {
 		send "L?\r\n"	# get LED status 0=on, 1=off, B=blink
 		expect "(0|1|B)" 
-		setstatus "1" $1 on="(B|0)" off="1"
+		setplugstate "1" $1 on="(B|0)" off="1"
 	}
 	script status_temp {
 		send "T0\r\n"	# get temp probe 0 (there is also a 1- unused)
 		expect "([0-9]+)\r" # value is 8-bit Celcius  
-		setstatus "1" $1
+		setplugstate "1" $1
 	}
 }
