@@ -19,30 +19,30 @@ specification "vicebox" {
 	script status_all {
 		send "ps *\r\n"
 		expect "N1:([01]) N2:([01]) N3:([01]) N4:([01]) N5:([01]) N6:([01]) N7:([01]) N8:([01]) N9:([01]) N10:([01])[[:space:]]*\r\n"
-		setstatus "1" $1 off="0" on="1"
-		setstatus "2" $2 off="0" on="1"
-		setstatus "3" $3 off="0" on="1"
-		setstatus "4" $4 off="0" on="1"
-		setstatus "5" $5 off="0" on="1"
-		setstatus "6" $6 off="0" on="1"
-		setstatus "7" $7 off="0" on="1"
-		setstatus "8" $8 off="0" on="1"
-		setstatus "9" $9 off="0" on="1"
-		setstatus "10" $10 off="0" on="1"
+		setplugstate "1" $1 off="0" on="1"
+		setplugstate "2" $2 off="0" on="1"
+		setplugstate "3" $3 off="0" on="1"
+		setplugstate "4" $4 off="0" on="1"
+		setplugstate "5" $5 off="0" on="1"
+		setplugstate "6" $6 off="0" on="1"
+		setplugstate "7" $7 off="0" on="1"
+		setplugstate "8" $8 off="0" on="1"
+		setplugstate "9" $9 off="0" on="1"
+		setplugstate "10" $10 off="0" on="1"
 	}
 	script status_soft_all {
 		send "ns *\r\n"
 		expect "N1:([01]) N2:([01]) N3:([01]) N4:([01]) N5:([01]) N6:([01]) N7:([01]) N8:([01]) N9:([01]) N10:([01])[[:space:]]*\r\n"
-		setstatus "1" $1 off="0" on="1"
-		setstatus "2" $2 off="0" on="1"
-		setstatus "3" $3 off="0" on="1"
-		setstatus "4" $4 off="0" on="1"
-		setstatus "5" $5 off="0" on="1"
-		setstatus "6" $6 off="0" on="1"
-		setstatus "7" $7 off="0" on="1"
-		setstatus "8" $8 off="0" on="1"
-		setstatus "9" $9 off="0" on="1"
-		setstatus "10" $10 off="0" on="1"
+		setplugstate "1" $1 off="0" on="1"
+		setplugstate "2" $2 off="0" on="1"
+		setplugstate "3" $3 off="0" on="1"
+		setplugstate "4" $4 off="0" on="1"
+		setplugstate "5" $5 off="0" on="1"
+		setplugstate "6" $6 off="0" on="1"
+		setplugstate "7" $7 off="0" on="1"
+		setplugstate "8" $8 off="0" on="1"
+		setplugstate "9" $9 off="0" on="1"
+		setplugstate "10" $10 off="0" on="1"
 	}
 	script on {
 		send "ph %s\r\n"
