@@ -25,7 +25,7 @@ specification "vpc" {
 		send "stat\r\n"
 		foreachplug {
 			expect "plug ([0-9]+): (ON|OFF)"
-			setstatus $1 $2 on="ON" off="OFF"
+			setplugstate $1 $2 on="ON" off="OFF"
 		}
 		expect "[0-9]* OK"
 		expect "[0-9]* vpc> "
@@ -34,7 +34,7 @@ specification "vpc" {
 		send "stat_soft\r\n"
 		foreachplug {
 			expect "plug ([0-9]+): (ON|OFF)"
-			setstatus $1 $2 on="ON" off="OFF"
+			setplugstate $1 $2 on="ON" off="OFF"
 		}
 		expect "[0-9]* OK"
 		expect "[0-9]* vpc> "
@@ -48,7 +48,7 @@ specification "vpc" {
 		send "stat\r\n"
 		foreachplug {
 			expect "plug ([0-9]+): (ON|OFF)"
-			setstatus $1 $2 on="ON" off="OFF"
+			setplugstate $1 $2 on="ON" off="OFF"
 		}
 		ifoff {	
 			send "toggle %s\r\n"
@@ -65,7 +65,7 @@ specification "vpc" {
 		send "stat\r\n"
 		foreachplug {
 			expect "plug ([0-9]+): (ON|OFF)"
-			setstatus $1 $2 on="ON" off="OFF"
+			setplugstate $1 $2 on="ON" off="OFF"
 		}
 		ifon {
 			send "toggle %s\r\n"
